[package]
name = "FlashCards-BE"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sea-orm = "1.1.14"
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"

[workspace]
members = []
